--- a/Ink-painting/index.html
+++ b/Ink-painting/index.html
@@ -11,6 +11,7 @@
     <main>
     </main>
     <h1>Ink painting</h1>
+    <p>Click on the grey area</p>
     <script src="sketch.js"></script>
   </body>
 </html>
